@@ -10,6 +10,10 @@ It features a simple interface, fully adaptable administration
 and user experience, internationalization, platform and database
 abstraction, and endless possibilities for project expansion.
 --------------------
+2009-04-08, alberts -- REVISION 63
+  Fix bug in year calculation for SecondIn function in zenDate class tt#8276
+   -  includes/zenDate.class.php
+
 2009-03-29, alberts -- REVISION 62
   Fix "My Tickets" pagination no working properly tt#8240
    -  includes/templates/listTickets.php
